Correct spacing of nav bar

--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,6 @@
     --main-final-bg: #d8e2dc;
 }
 
-* ,
-*::before, ::after {
-    font-size: 20px;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
 
 img {
     border: none;
@@ -23,7 +16,9 @@ body {
     color: var(--dark-accent);
     line-height: 1.6;
     font-size: 20px;
-
+    border: none;
+    margin: auto;
+    padding: 0px;
 }
 
 .nav {
@@ -36,33 +31,33 @@ body {
 }
 
 
-.nav-list {
+.nav-contents {
     display: flex;
     justify-content: space-between;
-    margin-right: 2rem;
+    align-items: center;
     
 }
-.nav-list a{
+.right {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-right: 50px;
+}
+ 
+
+.link a{
     text-decoration: none;
     color: var(--dark-accent);
-    font-weight: bolder;
     font-size: 20px;
-    padding: 1.3rem;
 }
 
-.nav-list a:hover {
-    color: var(--links-nav);
-    background: var(--dark-accent);
+.link a:hover {
+    text-decoration: underline;
+    font-weight: bolder;
 }
 
 
 ul {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
     list-style: none;
 }
 
